--- a/src/scss/_variables.scss
+++ b/src/scss/_variables.scss
@@ -17,3 +17,7 @@ $smalltext: 14px;
 $duration: .2s;
 $distance: 8px;
 $easeOutBack: cubic-bezier(0.175, 0.885, 0.320, 1.275);
+$font-family-primary: 'Montserrat',
+sans-serif;
+$font-family-secondary: 'Roboto Slab',
+serif;
