--- a/src/scss/header.scss
+++ b/src/scss/header.scss
@@ -6,82 +6,28 @@
     margin: 0 auto;
 }
 
-// .headervisible {
-//     position: fixed;
-//     top: 0;
-//     left: 13.45%;
-//     z-index: 10;
-//     border-radius: 10px;
-// }
-// .headerunvisible {}
-.header__logo {
-    margin-top: 31px;
-    height: 55px;
-    & img {
-        height: 55px;
-    }
+.logo {
+    height: 80px;
 }
 
 .header__nav {
-    padding-top: 50px;
-    width: 400px;
-    display: flex;
-    justify-content: space-between;
-}
-
-.header__nav-item {
-    font-size: 18px;
-    font-weight: 500;
-    color: $black;
-    transition: all 0.3s;
-    &:hover {
-        transition: all 0.3s;
-        color: $highlight;
-        transform: scale(1.1);
-    }
-}
-
-.header__contacts {
-    padding-top: 50px;
-    width: 350px;
-    justify-content: space-between;
-    display: flex;
-}
-
-.header__contacts-item {
-    color: $black;
-    &:hover {
-        transition: all 0.3s;
-        color: $highlight;
-        text-decoration: none;
-    }
-}
-
-@media screen and (max-width: 1280px) {
-    .desktop-nav {
-        display: none;
-    }
-    .nav-toggle {
-        display: block !important;
-    }
-    .header__contacts {
-        display: none;
-    }
-    .header__logo-container {
+    & ul {
         width: 100%;
-        max-width: 1200px;
+        max-width: 524px;
+        margin-top: 25px;
+        list-style: none;
         display: flex;
+        flex-direction: row;
         justify-content: space-between;
-    }
-}
-
-@media screen and (max-width: 600px) {
-    .header__logo {
-        width: 220px;
-        margin-top: 55px;
-        & img {
-            width: 220px;
-            height: 40px;
+        & li a {
+            color: #282828;
+            text-decoration: none;
+            border-bottom: 1px solid rgba(22, 22, 22, 0);
+            transition: all 0.25s ease-in-out;
+            &:hover {
+                transition: all 0.25s ease-in-out;
+                border-bottom: 1px solid rgba(22, 22, 22, 1);
+            }
         }
     }
 }
