--- a/src/scss/_variables.scss
+++ b/src/scss/_variables.scss
@@ -9,7 +9,9 @@ $highlight2: #005293;
 $orange: #FF885D;
 $tocolor: #01D0F7;
 $footer: #f7f7f7;
-$fontfamily: Montserrat;
+$fontfamily: Raleway,
+Arial,
+sans-serif;
 $title: 48px;
 $subtitle: 24px;
 $text:18px;
