--- a/src/scss/accordion.scss
+++ b/src/scss/accordion.scss
@@ -19,6 +19,8 @@
     margin-top: 20px;
     padding: 10px;
     display: flex;
+    font-size: 24px;
+    font-weight: 400;
     flex-wrap: nowrap;
     flex-direction: row;
     align-content: center;
@@ -28,8 +30,12 @@
     border: 0px;
     background: #CFD0DB;
     box-shadow: 0px 0px 50px rgba(#3D3E3D, 0);
+    transition: all 0.25s ease-in-out;
     &:hover {
         cursor: pointer;
+        transition: all 0.25s ease-in-out;
+        box-shadow: 1px 1px 20px rgba(#3D3E3D, 0.3);
+        background: #26A6D3;
     }
 }
 
