--- a/src/scss/price.scss
+++ b/src/scss/price.scss
@@ -5,6 +5,12 @@
     margin-top: 50px;
 }
 
+.price {
+    width: 100%;
+    max-width: 1384px;
+    margin: 0 auto;
+}
+
 .price__title {
     font-family: $fontfamily;
     font-size: 36px;
@@ -23,6 +29,7 @@
     width: 100%;
     max-width: 748px;
     margin: 0 auto;
+    margin-top: 30px;
     min-height: 200px;
     background: linear-gradient(#CFD0DB, #E4E4E4);
     border-radius: 8px;
@@ -35,4 +42,33 @@
 
 .card__img {
     margin-top: 20px;
+}
+
+.card__title {
+    font-size: 28px;
+    font-weight: 400;
+}
+
+.card__price {
+    font-size: 48px;
+    font-weight: 400;
+    line-height: 48px;
+    margin-bottom: 10px;
+}
+
+.card__button {
+    width: 250px;
+    height: 70px;
+    color: #282828;
+    background: #FAD652;
+    border: 0;
+    border-radius: 8px;
+    transition: all 0.25s ease-in-out;
+    font-size: 24px;
+    font-weight: 400;
+    &:hover {
+        cursor: pointer;
+        background: #e7b911;
+        transition: all 0.25s ease-in-out;
+    }
 }
