cert block desktop

--- a/src/scss/accordion.scss
+++ b/src/scss/accordion.scss
@@ -34,8 +34,8 @@
     &:hover {
         cursor: pointer;
         transition: all 0.25s ease-in-out;
-        box-shadow: 1px 1px 20px rgba(#3D3E3D, 0.3);
-        background: #26A6D3;
+        box-shadow: 1px 1px 20px rgba(#3D3E3D, 0.4);
+        background: #CFD0DB;
     }
 }
 
