--- a/src/scss/footer.scss
+++ b/src/scss/footer.scss
@@ -1,3 +1,7 @@
+.footer__wrapper {
+    background: #CFD0DA;
+}
+
 .footer {
     width: 100%;
     max-width: 1384px;
@@ -7,62 +11,21 @@
 }
 
 .footer__logo {
-    margin-top: 31px;
-    height: 55px;
-    & img {
-        height: 55px;
-    }
-}
-
-.copyright {
     display: flex;
-    align-items: center;
-    margin-top: 45px;
-    margin-bottom: 20px;
-    & a {
+}
+
+.footer__contacts-nav {
+    list-style: none;
+    & li a {
+        display: flex;
+        flex-direction: row;
+        color: black;
         text-decoration: none;
-        color: rgb(44, 44, 44);
-    }
-}
-
-@media screen and (max-width: 428px) {
-    .footer {
-        display: block;
-        margin: 0 auto;
-        box-sizing: border-box;
-        padding: 20px;
-    }
-    .footer__logo {
-        width: 220px;
-        margin: 0 auto;
         & img {
-            width: 220px;
-            height: 40px;
+            display: flex;
+            height: 24px;
+            padding-top: 12px;
+            padding-right: 10px;
         }
-    }
-    .copyright {
-        display: block;
-        text-align: center;
-    }
-}
-
-@media screen and (max-width: 414px) {
-    .footer {
-        display: block;
-        margin: 0 auto;
-        box-sizing: border-box;
-        padding: 20px;
-    }
-    .footer__logo {
-        width: 220px;
-        margin: 0 auto;
-        & img {
-            width: 220px;
-            height: 40px;
-        }
-    }
-    .copyright {
-        display: block;
-        text-align: center;
     }
 }
