--- a/src/scss/footer.scss
+++ b/src/scss/footer.scss
@@ -12,6 +12,8 @@
 
 .footer__logo {
     display: flex;
+    height: 100%;
+    margin-top: 80px;
 }
 
 .footer__contacts-nav {
@@ -19,12 +21,13 @@
     & li a {
         display: flex;
         flex-direction: row;
+        align-items: center;
         color: black;
         text-decoration: none;
+        padding-top: 10px;
         & img {
             display: flex;
             height: 24px;
-            padding-top: 12px;
             padding-right: 10px;
         }
     }
