--- a/src/scss/scrolltotop.scss
+++ b/src/scss/scrolltotop.scss
@@ -13,8 +13,7 @@
     padding: .25em;
     width: 40px;
     height: 40px;
-    background-color: #01D0F7;
-    border: 2px solid #7670D2;
+    background-color: #f3f3f3;
     &.show {
         visibility: visible;
         opacity: 1;
@@ -24,15 +23,14 @@
         opacity: 0;
     }
     svg {
-        fill: #7670D2;
+        fill: #000;
         width: 24px;
         height: 12px;
     }
     &:hover {
-        background-color: #7670D2;
-        border: 2px solid #01D0F7;
+        background-color: #E8E8E8;
         svg {
-            fill: #01D0F7;
+            fill: #000000;
         }
     }
 }
@@ -55,21 +53,14 @@
         left: 5px;
         z-index: 100000; // Above WP toolbar
         clip-path: none;
-        background-color: #EDF2F7;
+        background-color: #eee;
         padding: 15px 23px 14px;
         width: auto;
         height: auto;
         text-decoration: none;
         line-height: normal;
-        color: #EDF2F7;
+        color: #444;
         font-size: 1em;
         clip: auto !important;
-    }
-}
-
-@media (max-width: 414px) {
-    .top-link {
-        bottom: 75px;
-        right: -25px;
     }
 }
