--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -76,13 +76,13 @@
         .dot {
             width: 30px;
             height: 4px;
+            border-radius: 5px;
             opacity: 1;
-            background: rgba(255, 255, 255, 0.5);
+            background: rgba(#338BD2, 0.5);
             border: 0 solid white;
-            border-radius: 0;
             &.is-selected {
-                background: #ff0000;
-                border: 0 solid #ff0000;
+                background: #FAD652;
+                border: 0 solid #FAD652;
             }
         }
     }
