--- a/src/scss/footer.scss
+++ b/src/scss/footer.scss
@@ -6,6 +6,8 @@
     width: 100%;
     max-width: 1384px;
     display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
     justify-content: space-between;
     margin: 0 auto;
     margin-top: 60px;
