--- a/src/scss/header.scss
+++ b/src/scss/header.scss
@@ -31,3 +31,12 @@
         }
     }
 }
+
+@media screen and (max-width: 1280px) {
+    .desktop-nav {
+        display: none;
+    }
+    .nav-toggle {
+        display: block !important;
+    }
+}
