--- a/src/scss/about.scss
+++ b/src/scss/about.scss
@@ -39,3 +39,15 @@
     width: 100%;
     max-width: 600px;
 }
+
+@media screen and (max-width: 428px) {
+    .about__title {
+        font-size: 24px;
+        padding-left: 10px;
+    }
+    .about__text {
+        margin-top: 0px;
+        box-sizing: border-box;
+        padding: 10px;
+    }
+}
