--- a/src/scss/price.scss
+++ b/src/scss/price.scss
@@ -63,6 +63,7 @@
     background: #FAD652;
     border: 0;
     border-radius: 8px;
+    margin-bottom: 15px;
     transition: all 0.25s ease-in-out;
     font-size: 24px;
     font-weight: 400;
@@ -79,4 +80,13 @@
     margin: 0 auto;
     margin-top: 50px;
     margin-bottom: 50px;
+}
+
+@media screen and (max-width: 428px) {
+    .card__title {
+        text-align: center;
+    }
+    .card__price {
+        text-align: center;
+    }
 }
