--- a/src/scss/accordion.scss
+++ b/src/scss/accordion.scss
@@ -71,4 +71,8 @@
         box-sizing: border-box;
         padding: 10px;
     }
+    .accordion img {
+        width: 100%;
+        max-width: 50px;
+    }
 }
