--- a/src/scss/burger.scss
+++ b/src/scss/burger.scss
@@ -61,13 +61,22 @@
     
     .nav ul {
         position: absolute;
-        top: 65%;
+        top: 35%;
         -webkit-transform: translateY(-50%);
         -ms-transform: translateY(-50%);
         transform: translateY(-50%);
         list-style: none;
         margin: 0;
         padding: 0;
+    }
+    
+    .nav ul li a {
+        text-decoration: none;
+        color: #282828;
+    }
+    
+    .nav ul li {
+        padding-top: 15px;
     }
     
     .nav-toggle {
@@ -145,20 +154,5 @@
     @media screen and (max-width: 428px) {
         .nav-toggle {
             top: 12px !important;
-        }
-    }
-    
-    @media screen and (max-width: 414px) {
-        .nav.expanded {
-            right: 0px;
-        }
-        .nav-toggle {
-            top: 48px !important;
-        }
-    }
-    
-    @media screen and (max-width: 320px) {
-        .nav-toggle {
-            right: 15px;
         }
     }
